# Yznfs

./: .gitignore
.github/workflows/: rust.yml
client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/database/: mod.rs  structs.rs
server/src/init/: mod.rs
server/src/network/: mod.rs
yznfs-server/: Cargo.toml
yznfs-server/src/: main.rs
yznfs-server/src/database/: mod.rs  structs.rs
yznfs-server/src/init/: mod.rs
yznfs-server/src/network/: mod.rs
