[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Rashed <shsyge555@gmail.com"]
[dependencies]
rusqlite = { version = "0.29.0" }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

lazy_static = { version = "1.5.0" }
clap = "4.5.31"
uuid = { version = "1.15.1" , features = ["v4"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chrono = "0.4.39"
rocket = { version = "0.5.1" , features = ["serde_json" , "json"] }
tokio = "1.43.0"
